# py5_aulas

./: 404.html  index.html  index.md  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml  sketch.py
basic/: data_types.html  variaveis_e_operadores.html
css/: extra_css.css
docs/: index.md
docs/basic/: variaveis_e_operadores.ipynb
docs/figs/: logo_visual_header.xcf
docs/instala/: install.md  install_java.md  install_py5.md  sketch.py
docs/overrides/: main.html
docs/overrides/css/: extra_css.css
instala/: install.html  install.md  install_py5.html  install_py5.md  sketch.html  sketch.py
instalação/: install.html  install.md
overrides/: main.html
