[tool.poetry]
name = "py5_aulas"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py5 = "^0.10.0a0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pandas = "^2.2.1"



[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
